--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
      {%block styles %}
      {{super()}}
      <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet"> 
 
      {{ simplemde.css}}
      {{ simplemde.js }}
