--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,39 +3,41 @@
 {% extends 'base.html'%}
 
 {% block content %}
+
 <body background="{{url_for('static',filename='photos/')}}"></body>
 
-<div class = "jumbotron" style="width:100%;background-color: black;color:white;">
+<div class="jumbotron" style="width:100%;background-color: darkgreen;color:white;">
     <h1 class="text-center" style="font-family: 'Shadows Into Light', cursive;">WELCOME TO PITCHES 😀</h1>
-          
+
 </div>
 
-<div class = "container">
-    <div class = "card-body">
-        
-    </div>
-<div class="col-md-2"></div>
-<div class="col-md-10">
-    {%for pitch in pitches%}
-    <div class = "col-md-4" style="border:1px solid black;margin:4px;
-    border-radius:5px;border-bottom:3px solid black;" style="font-family: 'Shadows Into Light', cursive;">
-    <h2 style="font-family: 'Shadows Into Light', cursive;"><a href="/pitch/{{pitch.id}}">{{pitch.name}}</a></h2>
-    <h3 style="font-family: 'Shadows Into Light', cursive;">{{pitch.category}}</h3>
-    </div>
-    {%endfor%}
-<br><br>
-</div>
-<div class="col-md-0"></div>
-{% if current_user.is_authenticated %}
-
-<div class = "row">
+<div class="container">
+    <div class="card-body">
 
     </div>
-    <div class = "jumbotron" style="width:100%;background-color: black;color:white;font-family: 'Shadows Into Light', cursive;font-size: 20px;">
-{{wtf.quick_form(new_form)}}
-{% else %}
-{%endif%}
-</div>
+    <div class="col-md-2"></div>
+    <div class="col-md-10">
+        {%for pitch in pitches%}
+        <div class="col-md-4" style="border:1px solid darkgreen;margin:4px;
+    border-radius:5px;border-bottom:3px solid darkgreen;" style="font-family: 'Exo 2', sans-serif;">
+            <h2 style="font-family: 'Exo 2', sans-serif;"><a href="/pitch/{{pitch.id}}">{{pitch.name}}</a></h2>
+            <h3 style="font-family: 'Exo 2', sans-serif;">{{pitch.category}}</h3>
+        </div>
+        {%endfor%}
+        <br><br>
+    </div>
+    <div class="col-md-0"></div>
+    {% if current_user.is_authenticated %}
+
+    <div class="row">
+
+    </div>
+    <div class="jumbotron"
+        style="width:100%;background-color: darkgreen color:yellow; font-family: 'Exo 2', sans-serif;font-size: 15px;">
+        {{wtf.quick_form(new_form)}}
+        {% else %}
+        {%endif%}
+    </div>
 </div>
 
 </div>
