--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar navbar-inverse " role="navigation" style="width:100%;background-color: darkgreen color:yellow;">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,16 +7,16 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" style="font-family: 'Shadows Into Light', cursive;font-size: 20px;"> PITCH </a>
+            <a class="navbar-brand" href="/" style="font-family: 'Exo 2', sans-serif;font-size: 20px;"> PITCH </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li style="font-family: 'Shadows Into Light', cursive;font-size: 20px;"><a href="/">Home</a></li>
+                <li style="font-family: 'Exo 2', sans-serif; font-size: 20px;"><a href="/">Home</a></li>
                 </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                 <li style="color:white;"><a href="{{url_for('main.profile',uname=current_user.username)}}">profile</a></li>
-                <li style="font-family: 'Shadows Into Light', cursive;font-size: 20px;"><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+                <li style="font-family: 'Exo 2', sans-serif; font-size: 20px;"><a href="{{url_for('auth.logout')}}">Sign out</a></li>
                 {% else %}
                 <li style="font-family: 'Shadows Into Light', cursive;font-size: 20px;"><a href="{{url_for('auth.login')}}">Sign in</a></li>
                 {%endif%}
